Bug 65235 - journal gets corrupted without crash
Summary: journal gets corrupted without crash
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 10:24 UTC by Hussam Al-Tayeb
Modified: 2013-07-09 12:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
system.journal (44.05 KB, application/gzip)
2013-06-01 10:27 UTC, Hussam Al-Tayeb
Details

Description Hussam Al-Tayeb 2013-06-01 10:24:11 UTC
since archlinux moved to systemd, my journal gets corrupted every other day. no system crashes or faulty hardware/disk.
I am on 204
Comment 1 Hussam Al-Tayeb 2013-06-01 10:27:45 UTC
Created attachment 80123 [details]
system.journal
Comment 2 George Mitchell 2013-06-13 04:38:03 UTC
Very interesting.  This is exactly the sort of corruptions I am seeing in my journal data.  I have to systems running multiboot on the same hardware.  One is a very basic Mageia 3 64bit system running on ext4.  It has zero problem with journal corruptions.  The other is my main system, a 32bit Mageia 3 system running on 64bit Intel hardware.  The file system is exclusively btrfs raid 1 configuration.  On this system I get a constant flow of corruptions that look exactly like what Hussam is seeing.  The corruptions typically occur 89-95% into the verify scan.  What is interesting is that I am not seeing any problem with the actual logs, only with the verifies.  But I am finding that once these corruptions accumulate to a certain point the journal logging system itself dies.  I have had that happen once already and was only able to restore it by cleaning out the old journal files.  Since I can't trust the journal on this system, I am running rsyslog as a backup.
Comment 3 Hussam Al-Tayeb 2013-06-13 04:45:09 UTC
I use ext4. ext4 is very solid right now so I don't believe that is the source of my problem.
Comment 4 Zbigniew Jedrzejewski-Szmek 2013-06-23 00:42:54 UTC
Fixed (at least the "failure" shown by journalctl --verify for the attached journal file) in http://cgit.freedesktop.org/systemd/systemd/commit/?id=92fba83e.
Comment 5 Hussam Al-Tayeb 2013-07-09 04:51:05 UTC
in systemd 205 it now says:
journalctl --verify
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/user-1000@f99e4fb0b0104e9aa0452fbd05e0e9f6-0000000000000383-0004e0d6d378fcfa.journal
38f960: unused data (entry_offset==0)░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0%
38f9f8: unused data (entry_offset==0)
38fa88: unused data (entry_offset==0)
38fb18: unused data (entry_offset==0)
38fba0: unused data (entry_offset==0)
38fc30: unused data (entry_offset==0)
38fcc8: unused data (entry_offset==0)
38fd58: unused data (entry_offset==0)
38fdf8: unused data (entry_offset==0)
38feb0: unused data (entry_offset==0)
390080: unused data (entry_offset==0)
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/system@0004e0d6d278fa5f-e32c43e6a4ddd6b1.journal~
38f960: unused data (entry_offset==0)░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0%
38f9f8: unused data (entry_offset==0)
38fa88: unused data (entry_offset==0)
38fb18: unused data (entry_offset==0)
38fba0: unused data (entry_offset==0)
38fc30: unused data (entry_offset==0)
38fcc8: unused data (entry_offset==0)
38fd58: unused data (entry_offset==0)
38fe00: unused data (entry_offset==0)
38ff50: unused data (entry_offset==0)
38fff8: unused data (entry_offset==0)
3900a0: unused data (entry_offset==0)
390120: unused data (entry_offset==0)
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/system.journal                       
38f960: unused data (entry_offset==0)░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0%
38f9f8: unused data (entry_offset==0)
38fa88: unused data (entry_offset==0)
38fb18: unused data (entry_offset==0)
38fba0: unused data (entry_offset==0)
38fc30: unused data (entry_offset==0)
38fcc0: unused data (entry_offset==0)
38fd50: unused data (entry_offset==0)
38fdf0: unused data (entry_offset==0)
38fe80: unused data (entry_offset==0)
38ff28: unused data (entry_offset==0)
38ffd0: unused data (entry_offset==0)
390050: unused data (entry_offset==0)
47c808: unused data (entry_offset==0)
47c860: unused data (entry_offset==0)
47c8c0: unused data (entry_offset==0)
47c930: unused data (entry_offset==0)
47ca48: unused data (entry_offset==0)
47cab0: unused data (entry_offset==0)
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/system@f6f94852737b4dc9bb4e633475eda50c-00000000000008d2-0004e0d713b9e17e.journal
4ef718: unused data (entry_offset==0)░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0%
4ef7b0: unused data (entry_offset==0)
4ef838: unused data (entry_offset==0)
4ef8c8: unused data (entry_offset==0)
4ef950: unused data (entry_offset==0)
4ef9e0: unused data (entry_offset==0)
4efa70: unused data (entry_offset==0)
4efb00: unused data (entry_offset==0)
4efba0: unused data (entry_offset==0)
4efc48: unused data (entry_offset==0)
4efcf0: unused data (entry_offset==0)
4efd60: unused data (entry_offset==0)
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/system@f6f94852737b4dc9bb4e633475eda50c-0000000000000001-0004e0d6d24159a2.journal
11fa8c0: unused data (entry_offset==0)░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  31%
11fa918: unused data (entry_offset==0)
11fa978: unused data (entry_offset==0)
11fa9e0: unused data (entry_offset==0)
11faa60: unused data (entry_offset==0)
11faac8: unused data (entry_offset==0)
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/system@ee524debdaf5433da394d2a54af7ef37-0000000000000001-0004e02077400878.journal
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/user-1000.journal                    
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/user-1000@f99e4fb0b0104e9aa0452fbd05e0e9f6-00000000000008d4-0004e0d73392eac4.journal
PASS: /var/log/journal/efb490e643e2436d9d1138df1745a008/user-1000@614ccb64ec9843cd8763f2a7af5a810f-0000000000000594-0004e0259e5dad16.journal

I can safely ignore those?
Comment 6 Zbigniew Jedrzejewski-Szmek 2013-07-09 12:42:09 UTC
(In reply to comment #5)
> I can safely ignore those?
Yes.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.